[gd_scene load_steps=9 format=3 uid="uid://dwl24scqs6hx6"]

[ext_resource type="Script" path="res://Scripts/Main/back_button.gd" id="1_pq1ag"]
[ext_resource type="Texture2D" uid="uid://dt62tn00h4lnc" path="res://Textures/Radio.PNG" id="1_xryvo"]
[ext_resource type="Script" path="res://Scripts/Main/RadioReplace/radio.gd" id="2_371uq"]
[ext_resource type="Texture2D" uid="uid://drql2fhntdnaf" path="res://Textures/border_tile_map.png" id="3_b13oj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iukta"]
size = Vector2(56, 56)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c2olb"]
texture = ExtResource("3_b13oj")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_3use8"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_c2olb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ilxv7"]
size = Vector2(96, 64)

[node name="RadioReplacementScene" type="Node2D"]

[node name="BackgroundSprite2D" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="DEBUG_BGPolygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(0.588235, 0.588235, 0.588235, 1)
polygon = PackedVector2Array(0, 0, 1280, 0, 1280, 736, 0, 736)

[node name="RadioSprite2D" type="Sprite2D" parent="."]
position = Vector2(96, 640)
texture = ExtResource("1_xryvo")
script = ExtResource("2_371uq")

[node name="RadioButton" type="Button" parent="RadioSprite2D"]
modulate = Color(1, 1, 1, 0)
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0

[node name="Area2D" type="Area2D" parent="RadioSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadioSprite2D/Area2D"]
shape = SubResource("RectangleShape2D_iukta")

[node name="BordersTileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3use8")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(1376256, 0, 0, 1310720, 0, 0, 1245184, 0, 0, 1179648, 0, 0, 1114112, 0, 0, 1048576, 0, 0, 983040, 0, 0, 917504, 0, 0, 851968, 0, 0, 786432, 0, 0, 720896, 0, 0, 655360, 0, 0, 589824, 0, 0, 524288, 0, 0, 458752, 0, 0, 393216, 0, 0, 327680, 0, 0, 262144, 0, 0, 196608, 0, 0, 131072, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 131111, 0, 0, 196647, 0, 0, 262183, 0, 0, 327719, 0, 0, 393255, 0, 0, 458791, 0, 0, 524327, 0, 0, 589863, 0, 0, 655399, 0, 0, 720935, 0, 0, 786471, 0, 0, 852007, 0, 0, 917543, 0, 0, 983079, 0, 0, 1048615, 0, 0, 1114151, 0, 0, 1179687, 0, 0, 1245223, 0, 0, 1310759, 0, 0, 1376295, 0, 0, 1376261, 0, 0, 1441797, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1310725, 0, 0, 1245189, 0, 0, 1179653, 0, 0, 1114117, 0, 0, 1048581, 0, 0, 720901, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 917514, 0, 0, 851978, 0, 0, 786442, 0, 0, 720906, 0, 0, 655370, 0, 0, 655365, 0, 0, 589829, 0, 0, 524293, 0, 0, 458757, 0, 0, 393221, 0, 0, 262154, 0, 0, 196618, 0, 0, 131082, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 917524, 0, 0, 851988, 0, 0, 786452, 0, 0, 720916, 0, 0, 655380, 0, 0, 589843, 0, 0, 589842, 0, 0, 589841, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 196633, 0, 0, 131097, 0, 0, 589854, 0, 0, 458782, 0, 0, 524318, 0, 0, 589853, 0, 0, 589852, 0, 0, 589851, 0, 0, 589850, 0, 0, 655385, 0, 0, 720921, 0, 0, 786457, 0, 0, 851993, 0, 0, 917529, 0, 0, 983065, 0, 0, 1048601, 0, 0, 1114137, 0, 0, 1179673, 0, 0, 1245209, 0, 0, 1310745, 0, 0, 1310744, 0, 0, 1310743, 0, 0, 1310742, 0, 0, 393250, 0, 0, 393249, 0, 0, 393248, 0, 0, 393247, 0, 0, 458786, 0, 0, 524322, 0, 0, 589857, 0, 0, 589856, 0, 0, 589855, 0, 0, 458784, 0, 0, 458783, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 458785, 0, 0, 917538, 0, 0, 917537, 0, 0, 917536, 0, 0, 917535, 0, 0, 917534, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1376290, 0, 0, 1441826, 0, 0, 1441831, 0, 0, 983074, 0, 0, 983073, 0, 0, 983072, 0, 0, 983071, 0, 0, 983070, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 983078, 0, 0, 983077, 0, 0, 983076, 0, 0, 983075, 0, 0, 655379, 0, 0, 655378, 0, 0, 655377, 0, 0, 655376, 0, 0, 655375, 0, 0, 655374, 0, 0, 655373, 0, 0, 655372, 0, 0, 655371, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 786451, 0, 0, 786450, 0, 0, 786449, 0, 0, 786448, 0, 0, 786447, 0, 0, 786446, 0, 0, 786445, 0, 0, 786444, 0, 0, 786443, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 917516, 0, 0, 917515, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 917523, 0, 0, 917522, 0, 0, 917521, 0, 0, 917520, 0, 0, 851983, 0, 0, 851982, 0, 0, 196619, 0, 0, 131083, 0, 0, 131084, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 196631, 0, 0, 196632, 0, 0, 131096, 0, 0, 196630, 0, 0, 196629, 0, 0, 196628, 0, 0, 196627, 0, 0, 196626, 0, 0, 196625, 0, 0, 196624, 0, 0, 196623, 0, 0, 131085, 0, 0, 131073, 0, 0, 131110, 0, 0, 131098, 0, 0, 131081, 0, 0, 524317, 0, 0, 655386, 0, 0, 1245190, 0, 0, 1245208, 0, 0, 1048614, 0, 0, 1245210, 0, 0, 852006, 0, 0, 196634, 0, 0, 131099, 0, 0, 196617, 0, 0, 131080, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 655364, 0, 0, 589828, 0, 0, 524292, 0, 0, 458756, 0, 0, 786456, 0, 0, 851992, 0, 0, 917528, 0, 0, 983064, 0, 0, 1048600, 0, 0, 1048602, 0, 0, 983066, 0, 0, 917530, 0, 0, 851994, 0, 0, 786458, 0, 0, 852005, 0, 0, 852004, 0, 0, 852003, 0, 0, 852002, 0, 0, 852001, 0, 0, 852000, 0, 0, 851999, 0, 0, 1048613, 0, 0, 1048612, 0, 0, 1048611, 0, 0, 1048610, 0, 0, 1048609, 0, 0, 1048608, 0, 0, 1048607, 0, 0, 1114150, 0, 0, 786470, 0, 0, 786469, 0, 0, 1114149, 0, 0, 720934, 0, 0, 1179686, 0, 0, 720922, 0, 0, 655387, 0, 0, 524316, 0, 0, 524315, 0, 0, 458781, 0, 0, 1114136, 0, 0, 1179672, 0, 0, 1245207, 0, 0, 1376262, 0, 0, 1441798, 0, 1, 1376263, 65536, 0, 1441799, 65536, 1, 1376264, 0, 0, 1441800, 0, 1, 1376265, 65536, 0, 1441801, 65536, 1, 1376266, 0, 0, 1441802, 0, 1, 1376267, 65536, 0, 1441803, 65536, 1, 1376268, 0, 0, 1441804, 0, 1, 1376269, 65536, 0, 1441805, 65536, 1, 1376270, 0, 0, 1441806, 0, 1, 1376271, 65536, 0, 1441807, 65536, 1, 1376272, 0, 0, 1441808, 0, 1, 1376273, 65536, 0, 1441809, 65536, 1, 1376274, 0, 0, 1441810, 0, 1, 1376275, 65536, 0, 1441811, 65536, 1, 1376276, 0, 0, 1441812, 0, 1, 1376277, 65536, 0, 1441813, 65536, 1, 1376278, 0, 0, 1441814, 0, 1, 1376279, 65536, 0, 1441815, 65536, 1, 1376280, 0, 0, 1441816, 0, 1, 1376281, 65536, 0, 1441817, 65536, 1, 1376282, 0, 0, 1441818, 0, 1, 1376283, 65536, 0, 1441819, 65536, 1, 1376284, 0, 0, 1441820, 0, 1, 1376285, 65536, 0, 1441821, 65536, 1, 1376286, 0, 0, 1441822, 0, 1, 1376287, 65536, 0, 1441823, 65536, 1, 1376288, 0, 0, 1441824, 0, 1, 1376289, 65536, 0, 1441825, 65536, 1, -65515, 0, 0, 21, 0, 1, -65514, 65536, 0, 22, 65536, 1, -65513, 0, 0, 23, 0, 1, -65512, 65536, 0, 24, 65536, 1, -65511, 0, 0, 25, 0, 1, -65510, 65536, 0, 26, 65536, 1, -65509, 0, 0, 27, 0, 1, -65508, 65536, 0, 28, 65536, 1, -65507, 0, 0, 29, 0, 1, -65506, 65536, 0, 30, 65536, 1, -65505, 0, 0, 31, 0, 1, -65504, 65536, 0, 32, 65536, 1, -65503, 0, 0, 33, 0, 1, -65502, 65536, 0, 34, 65536, 1, -65501, 0, 0, 35, 0, 1, -65500, 65536, 0, 36, 65536, 1, -65499, 0, 0, 37, 0, 1, -65498, 65536, 0, 38, 65536, 1, -65519, 0, 0, 17, 0, 1, -65518, 65536, 0, 18, 65536, 1, -65517, 0, 0, 19, 0, 1, -65516, 65536, 0, 20, 65536, 1, -65521, 0, 0, 15, 0, 1, -65520, 65536, 0, 16, 65536, 1, -65523, 0, 0, 13, 0, 1, -65522, 65536, 0, 14, 65536, 1, -65525, 0, 0, 11, 0, 1, -65524, 65536, 0, 12, 65536, 1, -65527, 0, 0, 9, 0, 1, -65526, 65536, 0, 10, 65536, 1, -65529, 0, 0, 7, 0, 1, -65528, 65536, 0, 8, 65536, 1, -65531, 0, 0, 5, 0, 1, -65530, 65536, 0, 6, 65536, 1, -65533, 0, 0, 3, 0, 1, -65532, 65536, 0, 4, 65536, 1, -65535, 0, 0, 1, 0, 1, -65534, 65536, 0, 2, 65536, 1, -65536, 65536, 0, 0, 65536, 1, -65497, 0, 0, 39, 0, 0)

[node name="BackButton" type="Button" parent="."]
offset_left = 608.0
offset_right = 672.0
offset_bottom = 32.0
text = "^^^"
script = ExtResource("1_pq1ag")
enterAnimationName = "panel4_exit"

[node name="TargetArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea2D"]
position = Vector2(1200, 704)
shape = SubResource("RectangleShape2D_ilxv7")

[connection signal="button_down" from="RadioSprite2D/RadioButton" to="RadioSprite2D" method="_on_radio_button_button_down"]
[connection signal="button_up" from="RadioSprite2D/RadioButton" to="RadioSprite2D" method="_on_radio_button_button_up"]
[connection signal="area_shape_entered" from="RadioSprite2D/Area2D" to="RadioSprite2D" method="_on_area_2d_area_shape_entered"]
[connection signal="body_shape_entered" from="RadioSprite2D/Area2D" to="RadioSprite2D" method="_on_area_2d_body_shape_entered"]
[connection signal="button_down" from="BackButton" to="BackButton" method="_on_button_down"]
